# LocalCamera

./: CMakeLists.txt
CFGTest/: pom.xml
CFGTest/src/main/java/: CFG.java  CFGTest.java
assignment1/: a1-ece650.py  chart.html  output.txt  q1.c  q1.h
assignment2/: Makefile  base.c  graph.c  input.txt  main1.c  util.c
assignment2/a2-ece650/: Makefile  base.h  queue.h  util.h
assignment2/test/: test_extract.sh
assignment2/test/a2-ece650/: a2-ece650  graph.h  main.c  queue.c
assignment3/: InputTxt  Makefile  a1-ece650.py  a3-ece650  a3-ece650.c  a3-ece650.h  a3-ece650.h.gch  base.c  base.h  base.h.gch  compile_a3.sh  compile_rgen.sh  rgen  rgen.c  rgen.h  rgen.h.gch  util.c  util.h  util.h.gch
assignment4/: Makefile
assignment5/: Makefile  a5-ece650.c  a5-measure.c  measurement.sh
assignment5/graph_scripts/: approx.gnu  cnftime.gnu  generate_graph.sh  running_time_other_4_algorithms.gnu
cTest/: approx_vc1.c  approx_vc1.h  demo1.c  demo1.h  demo2.c  demo2.h  demo3.c  demo3.h  demo4.c  demo4.h  demo5.c  demo5.h  demo6.c  demo6.h  demo7.c  demo7.h  demo8.c  demo8.h  textIput
cTest/assignment4/: SAT.h  a4-ece650.c  mengdongqi.c  mengdongqi.h
test/: pom.xml
testQ1/: pom.xml
testQ1/src/main/java/: TestM.java
zchaff64/: Makefile  cnf_stats  mengdongqi.cpp  mengdongqi.h  zchaff  zminimal  zverify_df
